--- a/.pylintrc
+++ b/.pylintrc
@@ -5,6 +5,7 @@ disable:too-few-public-methods,
         missing-class-docstring,
         too-many-arguments,
         consider-using-with,
+        invalid-name,
 
 [FORMAT]
 max-line-length=100
