--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pycodestyle==2.10.0
 pyflakes==3.0.1
 pylint==2.17.0
 pytest==7.2.2
+pytest-mock==3.10.0
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.5.0
