--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 astroid==2.15.0
+async-timeout==4.0.2
 attrs==22.2.0
+charset-normalizer==3.1.0
 coverage==7.2.1
 dill==0.3.6
 exceptiongroup==1.1.0
 flake8==6.0.0
+frozenlist==1.3.3
+idna==3.4
 iniconfig==2.0.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
+multidict==6.0.4
 packaging==23.0
 platformdirs==3.1.1
 pluggy==1.0.0
@@ -15,8 +22,10 @@ pycodestyle==2.10.0
 pyflakes==3.0.1
 pylint==2.17.0
 pytest==7.2.2
+pytest-asyncio==0.21.0
 pytest-mock==3.10.0
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.5.0
 wrapt==1.15.0
+yarl==1.9.1
