--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pylint==2.17.0
 pytest==7.2.2
 pytest-asyncio==0.21.0
 pytest-mock==3.10.0
+pytest-socket==0.6.0
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.5.0
