--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,12 @@ iniconfig==2.0.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
+memory-profiler==0.61.0
 multidict==6.0.4
 packaging==23.0
 platformdirs==3.1.1
 pluggy==1.0.0
+psutil==5.9.5
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pylint==2.17.0
