--- a/.pylintrc
+++ b/.pylintrc
@@ -11,7 +11,8 @@ disable:too-few-public-methods,
         no-member,
         use-implicit-booleaness-not-len,
         global-statement,
-        duplicate-code
+        duplicate-code,
+        broad-exception-caught
 
 [FORMAT]
 max-line-length=100
