--- a/.pylintrc
+++ b/.pylintrc
@@ -13,7 +13,8 @@ disable:too-few-public-methods,
         global-statement,
         duplicate-code,
         broad-exception-caught,
-        too-many-locals
+        too-many-locals,
+        protected-access
 
 [FORMAT]
 max-line-length=100
