--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ charset-normalizer==3.1.0
 coverage==7.2.1
 dill==0.3.6
 exceptiongroup==1.1.0
+factory-boy==3.2.1
+Faker==18.9.0
 flake8==6.0.0
 frozenlist==1.3.3
 idna==3.4
@@ -27,6 +29,8 @@ pytest==7.2.2
 pytest-asyncio==0.21.0
 pytest-mock==3.10.0
 pytest-socket==0.6.0
+python-dateutil==2.8.2
+six==1.16.0
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.5.0
