--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,110 @@
 aiohttp==3.8.4
+aioresponses==0.7.4
 aiosignal==1.3.1
-astroid==2.15.0
+anyascii==0.3.2
+apparmor==3.1.3
+application-utility==1.3.2
+arrow==1.2.3
 async-timeout==4.0.2
 attrs==22.2.0
+bcrypt==4.0.1
+beautifulsoup4==4.11.2
+binaryornot==0.4.4
+btrfsutil==6.2.2
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+chardet==5.1.0
 charset-normalizer==3.1.0
-coverage==7.2.1
-dill==0.3.6
-exceptiongroup==1.1.0
-factory-boy==3.2.1
-Faker==18.9.0
-flake8==6.0.0
+click==8.1.3
+configobj==5.1.0.dev0
+cookiecutter==2.1.1
+cryptography==40.0.1
+cssselect2==0.7.0
+distro==1.8.0
+docker==6.1.2
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+duplicity==1.2.2
+ewmh==0.1.6
+fasteners==0.18
+filelock==3.12.0
 frozenlist==1.3.3
+future==0.18.2
+google-api-core==2.11.0
+google-api-python-client==2.83.0
+google-auth==2.16.2
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.59.0
+gufw==22.4.0
+httplib2==0.22.0
 idna==3.4
-iniconfig==2.0.0
-isort==5.12.0
-lazy-object-proxy==1.9.0
-mccabe==0.7.0
-memory-profiler==0.61.0
+Jinja2==3.1.2
+jinja2-time==0.2.0
+jsonschema==3.2.0
+layoutswitcherlib==0.8.35
+LibAppArmor==3.1.3
+lit==15.0.7.dev0
+lxml==4.9.2
+manjaro-sdk==0.1
+MarkupSafe==2.1.2
+material-color-utilities-python==0.1.5
 multidict==6.0.4
+netsnmp-python==1.0a1
+nftables==0.1
+npyscreen==4.10.5
+oauth2client==4.1.3
 packaging==23.0
-platformdirs==3.1.1
-pluggy==1.0.0
-psutil==5.9.5
-pycodestyle==2.10.0
-pyflakes==3.0.1
-pylint==2.17.0
-pytest==7.2.2
-pytest-asyncio==0.21.0
-pytest-mock==3.10.0
-pytest-socket==0.6.0
+pacman-mirrors==4.23.2
+paramiko==2.11.1
+Pillow==9.4.0
+ply==3.11
+protobuf==4.21.12
+pulsectl==22.3.2
+pwquality==1.4.5
+pyaml==21.10.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.23.0
+pycparser==2.21
+PyDrive2==1.15.0
+PyGObject==3.44.1
+PyNaCl==1.4.0
+pyOpenSSL==23.1.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+PySide6==6.5.0
 python-dateutil==2.8.2
+python-dotenv==0.21.1
+python-slugify==8.0.1
+python-xlib==0.33
+pytz==2022.7.1
+PyYAML==5.4.1
+ranger-fm==1.9.3
+regex==2023.3.23
+reportlab==3.6.12
+requests==2.28.2
+requests-file==1.5.1
+rsa==4.9
+setproctitle==1.3.2
+shiboken6==6.5.0
+shiboken6-generator==6.5.0
 six==1.16.0
-tomli==2.0.1
-tomlkit==0.11.6
-typing_extensions==4.5.0
-ujson==5.7.0
-wrapt==1.15.0
-yarl==1.9.1
+soupsieve==2.4
+svglib==1.5.1
+systemd-python==235
+team==1.0
+text-unidecode==1.3
+texttable==1.6.7
+tinycss2==1.2.1
+tldextract==3.4.0
+ueberzug==18.1.9
+ufw==0.36.1
+uritemplate==4.1.1
+urllib3==1.26.13
+validate==5.1.0.dev0
+webencodings==0.5.1
+websocket-client==0.59.0
+Yapsy==1.12.2
+yarl==1.9.2
